[package]
name = "uw8"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native", "browser"]
native = ["wasmtime", "uw8-window", "cpal", "rubato" ]
browser = ["warp", "tokio", "tokio-stream", "webbrowser"]

[dependencies]
wasmtime = { version = "12.0.0", optional = true }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
uw8-window = { path = "uw8-window", optional = true }
notify-debouncer-mini = { version = "0.4.1", default-features = false }
pico-args = "0.5"
curlywas = { git = "https://github.com/exoticorn/curlywas.git", rev = "0e7ea50" }
wat = "1"
uw8-tool = { path = "uw8-tool" }
same-file = "1"
warp = { version = "0.3.5", optional = true }
tokio = { version = "1.32.0", features = ["sync", "rt"], optional = true }
tokio-stream = { version = "0.1.14", features = ["sync"], optional = true }
webbrowser = { version = "0.8.11", optional = true }
ansi_term = "0.12.1"
cpal = { version = "0.15.2", optional = true }
rubato = { version = "0.14.0", optional = true }
