[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curlywas = { git="https://github.com/exoticorn/curlywas.git", rev="196719b" }
uw8-tool = { path="../uw8-tool" }
anyhow = "1"
lodepng = "3.4"